# bpt-core

./: .bazelrc  .clang-format  .gitattributes  .gitignore  BUILD  CMakeLists.txt  MODULE.bazel  README.md  RESEARCH_SUMMARY_2026_05.md  SECMASTER.d2  WAREHOUSE.d2  WAREHOUSE.md  ruff.toml  vcpkg.json
bpt-analytics/src/: CMakeLists.txt  main.cpp
bpt-analytics/src/analysis/: fill_rate_tracker.cpp  markout_tracker.cpp  toxicity_scorer.cpp
bpt-analytics/src/app/: analytics_service.cpp  tyr_app.cpp
bpt-analytics/src/config/: config.cpp
bpt-analytics/src/messaging/: aeron_bus.cpp  exec_report_subscriber.cpp  md_bbo_subscriber.cpp  toxicity_publisher.cpp
bpt-analytics/tests/: CMakeLists.txt
bpt-analytics/tests/unit/: test_fill_rate_tracker.cpp  test_markout_tracker.cpp  test_toxicity_scorer.cpp
bpt-backtester/src/: CMakeLists.txt  main.cpp  main_mono.cpp
bpt-backtester/src/app/: backtester_app.cpp  backtester_service.cpp
bpt-backtester/src/clock/: clock_master.cpp
bpt-backtester/src/config/: loader.cpp
bpt-backtester/src/data/: data_loader.cpp
bpt-backtester/src/exchange/: binance_md_server.cpp  binance_order_server.cpp  hyperliquid_info_server.cpp  hyperliquid_md_server.cpp  hyperliquid_order_server.cpp  okx_md_server.cpp  okx_order_server.cpp
bpt-backtester/src/harness/: inprocess_order_gateway_client.cpp  strategy_harness.cpp
bpt-backtester/src/matching/: matching_engine.cpp  matching_engine_book.cpp
bpt-backtester/src/messaging/: aeron_bus.cpp  backtest_ack_subscriber.cpp  backtest_control_publisher.cpp
bpt-backtester/src/results/: results_collector.cpp
bpt-backtester/tests/: CMakeLists.txt
bpt-backtester/tests/unit/: test_config.cpp  test_data_loader.cpp  test_matching_engine.cpp  test_results_collector.cpp
bpt-common/: BUILD  CMakeLists.txt  README.md
bpt-common/.github/workflows/: clang-format.yml
bpt-common/include/bpt_common/: logging.h  logging_toml.h  signal.h
bpt-common/src/: env.cpp  logging.cpp
bpt-common/src/aeron/: streams_map.cpp
bpt-common/src/book/: order_book_state.cpp
bpt-common/src/recorder/: tape.cpp
bpt-common/src/secrets/: secrets_client.cpp
bpt-common/src/util/: openssl_helpers.cpp  topology.cpp  tsc_clock.cpp
bpt-common/tests/unit/: test_chaos_filter.cpp  test_logging.cpp  test_order_book_state.cpp  test_thread_name.cpp  test_topology.cpp
bpt-md-gateway/src/: CMakeLists.txt  main.cpp
bpt-md-gateway/src/app/: md_gateway_app.cpp  md_gateway_service.cpp
bpt-md-gateway/src/config/: loader.cpp
bpt-md-gateway/src/md/: md_encoder.cpp  md_validator.cpp  validation_drop_breaker.cpp
bpt-md-gateway/src/messaging/: ack_publisher.cpp  aeron_bus.cpp  funding_rate_publisher.cpp  md_control_subscriber.cpp  md_publisher.cpp
bpt-md-gateway/src/metrics/: metrics.cpp
bpt-md-gateway/src/recorder/: raw_spool.cpp
bpt-md-gateway/src/subscription/: subscription_manager.cpp
bpt-md-gateway/tests/: CMakeLists.txt
bpt-md-gateway/tests/component/: fake_ack_publisher.h  fake_md_publisher.h  test_binance_adapter.cpp  test_deribit_adapter.cpp  test_hyperliquid_adapter.cpp  test_hyperliquid_funding.cpp  test_okx_adapter.cpp  test_okx_l2_book.cpp  test_subscription_manager.cpp
bpt-md-gateway/tests/unit/: test_adapters.cpp  test_hyperliquid_md_encoder.cpp  test_md_validator.cpp  test_sbe_codecs.cpp  test_validation_drop_breaker.cpp
bpt-ops/: pyproject.toml
bpt-ops/bpt_ops/: __init__.py  cli.py
bpt-ops/bpt_ops/common/: _exchanges_generated.py  http.py  schema.py
bpt-order-gateway/src/: CMakeLists.txt  main.cpp
bpt-order-gateway/src/app/: gateway_app.cpp  order_gateway_service.cpp
bpt-order-gateway/src/config/: loader.cpp
bpt-order-gateway/src/messaging/: account_snapshot_publisher.cpp  aeron_bus.cpp  exec_report_publisher.cpp  heartbeat_publisher.cpp  order_subscriber.cpp
bpt-order-gateway/src/metrics/: metrics.cpp
bpt-order-gateway/src/order/: order_processor.cpp  order_state_manager.cpp
bpt-order-gateway/src/refdata/: instrument_cache.cpp  refdata_client.cpp
bpt-order-gateway/src/risk/: disconnect_rate_breaker.cpp  pnl_tracker.cpp  pre_trade_risk_gate.cpp  reject_rate_breaker.cpp  risk_checker.cpp
bpt-order-gateway/tests/: CMakeLists.txt
bpt-order-gateway/tests/unit/: test_adapters.cpp  test_config.cpp  test_disconnect_rate_breaker.cpp  test_hyperliquid_action_codec.cpp  test_hyperliquid_action_encoder.cpp  test_hyperliquid_exec_decoder.cpp  test_hyperliquid_exec_parser.cpp  test_hyperliquid_reconciler.cpp  test_hyperliquid_signer.cpp  test_order_processor_risk_latch.cpp  test_order_state_manager.cpp  test_pnl_tracker.cpp  test_reject_rate_breaker.cpp  test_risk_checker.cpp  test_sbe_codecs.cpp
bpt-pricer/src/: CMakeLists.txt  main.cpp
bpt-pricer/src/app/: pricer_app.cpp  pricer_service.cpp
bpt-pricer/src/config/: config.cpp
bpt-pricer/src/md/: md_subscribe_client.cpp  md_subscriber.cpp
bpt-pricer/src/messaging/: aeron_bus.cpp  status_publisher.cpp  vol_surface_publisher.cpp
bpt-pricer/src/pricing/: black_scholes.cpp  forward_curve.cpp  iv_solver.cpp  svi.cpp
bpt-refdata/src/: CMakeLists.txt  main.cpp
bpt-refdata/tests/: CMakeLists.txt  main_test.cpp  test_binance_parser.cpp  test_binance_refdata_decoder.cpp  test_config.cpp  test_hyperliquid_parser.cpp  test_hyperliquid_refdata_decoder.cpp  test_instrument_mapping.cpp  test_instrument_mapping_fixture.cpp  test_instrument_registry.cpp  test_okx_parser.cpp  test_okx_refdata_decoder.cpp  test_refdata_app_seam.cpp  test_refdata_service_seam.cpp  test_sbe_codecs.cpp
bpt-strategy/src/: CMakeLists.txt  main.cpp
bpt-strategy/tests/: CMakeLists.txt
dashboard/bridge/: BUILD  CMakeLists.txt
fenrir/src/: CMakeLists.txt
heimdall/src/: CMakeLists.txt
heimdall/tests/: CMakeLists.txt
messages/: .clang-format  .gitignore  BUILD  CMakeLists.txt  README.md  exchanges.yaml
messages/ci/: compile_check.cpp
messages/cmake/: bifrost-protocol-config.cmake.in  bpt-messages-config.cmake.in
messages/schema/: bifrost-protocol.xml  bpt-protocol.xml
messages/scripts/: download-sbe-tool.sh  generate.sh  install-hooks.sh
(+1362 files in other folders)
