module(
    name = "bpt-core",
    version = "0.1.0",
)

# ── Google Test ──────────────────────────────────────────────────────────────
bazel_dep(name = "googletest", version = "1.17.0")


# ── fmt ──────────────────────────────────────────────────────────────────────
bazel_dep(name = "fmt", version = "11.1.4")

# ── Boost ────────────────────────────────────────────────────────────────────
bazel_dep(name = "boost.asio", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.beast", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.json", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.system", version = "1.90.0.bcr.1")

# ── OpenSSL ──────────────────────────────────────────────────────────────────
bazel_dep(name = "openssl", version = "3.5.5.bcr.3")

# ── Rules ────────────────────────────────────────────────────────────────────
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")

# ── Aeron C++ client (no BCR module — custom http_archive) ───────────────────
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "aeron",
    urls = ["https://github.com/real-logic/aeron/archive/refs/tags/1.44.1.tar.gz"],
    strip_prefix = "aeron-1.44.1",
    build_file = "//third_party:aeron.BUILD",
)

# ── Quill async logger (no BCR module — custom http_archive) ─────────────────
http_archive(
    name = "quill",
    urls = ["https://github.com/odygrd/quill/archive/refs/tags/v8.1.0.tar.gz"],
    strip_prefix = "quill-8.1.0",
    build_file = "//third_party:quill.BUILD",
)

# ── toml++ (BCR target lacks a usable include path — use custom http_archive) ─
http_archive(
    name = "tomlplusplus",
    urls = ["https://github.com/marzer/tomlplusplus/archive/refs/tags/v3.4.0.tar.gz"],
    strip_prefix = "tomlplusplus-3.4.0",
    build_file = "//third_party:tomlplusplus.BUILD",
)

# ── CLI11 (BCR target uses a legacy cc_library load — use custom http_archive) ─
http_archive(
    name = "cli11",
    urls = ["https://github.com/CLIUtils/CLI11/archive/refs/tags/v2.5.0.tar.gz"],
    strip_prefix = "CLI11-2.5.0",
    build_file = "//third_party:cli11.BUILD",
)

# ── secp256k1 (no BCR module — custom http_archive) ─────────────────────────
http_archive(
    name = "secp256k1",
    urls = ["https://github.com/bitcoin-core/secp256k1/archive/refs/tags/v0.7.1.tar.gz"],
    strip_prefix = "secp256k1-0.7.1",
    build_file = "//third_party:secp256k1.BUILD",
)

# ── fast_float (header-only) ────────────────────────────────────────────────
http_archive(
    name = "fast_float",
    urls = ["https://github.com/fastfloat/fast_float/archive/refs/tags/v6.1.6.tar.gz"],
    strip_prefix = "fast_float-6.1.6",
    build_file = "//third_party:fast_float.BUILD",
)

# ── simdjson (amalgamated single TU) ────────────────────────────────────────
http_archive(
    name = "simdjson",
    urls = ["https://github.com/simdjson/simdjson/archive/refs/tags/v3.10.1.tar.gz"],
    strip_prefix = "simdjson-3.10.1",
    build_file = "//third_party:simdjson.BUILD",
)

# ── civetweb (used by prometheus-cpp pull) ──────────────────────────────────
http_archive(
    name = "civetweb",
    urls = ["https://github.com/civetweb/civetweb/archive/refs/tags/v1.16.tar.gz"],
    strip_prefix = "civetweb-1.16",
    build_file = "//third_party:civetweb.BUILD",
)

# ── prometheus-cpp (core + pull) ────────────────────────────────────────────
http_archive(
    name = "prometheus_cpp",
    urls = ["https://github.com/jupp0r/prometheus-cpp/archive/refs/tags/v1.3.0.tar.gz"],
    strip_prefix = "prometheus-cpp-1.3.0",
    build_file = "//third_party:prometheus_cpp.BUILD",
    # Upstream ships per-subdir BUILD.bazel files that turn core/ and pull/
    # into subpackages. We rebuild them from scratch in our own top-level BUILD.
    patch_cmds = ["find core pull util push bazel -name BUILD.bazel -delete"],
)

# ── nlohmann/json (header-only single include) ──────────────────────────────
http_archive(
    name = "nlohmann_json",
    urls = ["https://github.com/nlohmann/json/releases/download/v3.11.3/include.zip"],
    build_file = "//third_party:nlohmann_json.BUILD",
)

# ── pybind11 (for bpt-features/python bindings) ─────────────────────────────
# Lets the C++ feature library be called from Python research notebooks
# without re-implementing the features in Python — the production-research
# drift fix. pybind11_bazel provides the `pybind_extension` rule; the
# pybind11 module itself is the header library it wraps.
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "pybind11_bazel", version = "2.13.6")

# Python toolchain — uses the system Python by default. Override
# python_version via .bazelrc if a specific version is needed.
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
    is_default = True,
)
