[project]
name = "bpt-ops"
version = "0.1.0"
description = "Back-office batch jobs for the bpt trading system"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "httpx>=0.27",
    "pydantic>=2.8",
    "tenacity>=9.0",
    "tomli>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.8",
]

[project.scripts]
bpt-ops = "bpt_ops.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bpt_ops"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
